# project-template

./: README.md  create.sh
.github/workflows/: blank.yml
template/: .build-tools.cson  .build-tools.cson.swp  .editorconfig  CMakeLists.txt  configure.sh  main.cpp
template/src/: CMakeLists.txt
template/toolchains/: configure-x64-linux.sh  configure-x64-macos.sh
test/: main.sh
